# mbo-statistical-profiler

./: .gitignore  CODEBASE.md  CROSS_EXCHANGE_COMPARISON.md  Cargo.toml  NVDA_UNIFIED_ANALYSIS_CONCLUSION.md  README.md  TIER1_ANALYSIS_FINDINGS.md  XNAS ITCH Dataset Analysis Conclusion.md  ZERO_DTE_STRATEGY_BRIDGE.md
configs/: arcx_full_233day.toml  default.toml  full_single_day.toml  single_day_test.toml  xnas_crsp_134day.toml  xnas_dkng_134day.toml  xnas_fang_134day.toml  xnas_full_234day.toml  xnas_hood_134day.toml  xnas_ibkr_134day.toml  xnas_isrg_134day.toml  xnas_monthly_2025_02.toml  xnas_monthly_2025_03.toml  xnas_monthly_2025_04.toml  xnas_monthly_2025_05.toml  xnas_monthly_2025_06.toml  xnas_monthly_2025_07.toml  xnas_monthly_2025_08.toml  xnas_monthly_2025_09.toml  xnas_monthly_2025_10.toml  xnas_monthly_2025_11.toml  xnas_monthly_2025_12.toml  xnas_monthly_2026_01.toml  xnas_mrna_134day.toml  xnas_pep_134day.toml  xnas_snap_134day.toml  xnas_zm_134day.toml
output_CRSP_134day/: 01_QualityTracker.json  02_ReturnTracker.json  03_OfiTracker.json  04_SpreadTracker.json  05_VolatilityTracker.json  06_JumpTracker.json  07_NoiseTracker.json  08_DepthTracker.json  09_TradeTracker.json  10_LifecycleTracker.json  11_LiquidityTracker.json  12_VpinTracker.json  13_CrossScaleOfiTracker.json
output_arcx_full/: 01_QualityTracker.json  02_ReturnTracker.json  03_OfiTracker.json  04_SpreadTracker.json  05_VolatilityTracker.json  06_JumpTracker.json  07_NoiseTracker.json  08_DepthTracker.json  09_TradeTracker.json  10_LifecycleTracker.json  11_LiquidityTracker.json  (+3 more)
(+167 files in other folders)
