[package]
name = "mbo-statistical-profiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["nagarx"]
description = "High-performance statistical profiler for MBO/LOB market microstructure analysis"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["lob", "orderbook", "mbo", "hft", "microstructure", "statistics"]
categories = ["finance", "science"]

[lib]
name = "mbo_statistical_profiler"
path = "src/lib.rs"

[features]
default = ["databento"]
databento = ["mbo-lob-reconstructor/databento"]

[dependencies]
mbo-lob-reconstructor = { git = "https://github.com/nagarx/MBO-LOB-reconstructor.git", branch = "main" }
hft-statistics = { git = "https://github.com/nagarx/hft-statistics.git", rev = "737ba31f72ad472c5056df87472c3635ec4dd66c" }

ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[[bin]]
name = "profile_mbo"
path = "src/bin/profile_mbo.rs"
required-features = ["databento"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
